adding lame interface

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,5 +22,6 @@ Super Mayor: When being the mayor of one location isn't enough
 	  <td><%= record[:firstname].to_s %></td>
       <td><%= record[:districtname].to_s %></td>
     <% end %>
+   <% end %>
 </body>
 </html>
